Bug 239820 - kpresenter:openoffice:kpresenter is not displaying the inserted file name
Summary: kpresenter:openoffice:kpresenter is not displaying the inserted file name
Status: VERIFIED FIXED
Alias: None
Product: calligrastage
Classification: Applications
Component: opendocument (other bugs)
Version First Reported In: unspecified
Platform: unspecified All
: NOR normal
Target Milestone: ---
Assignee: KOffice Bug Wranglers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-24 06:53 UTC by Lassi Nieminen
Modified: 2010-12-27 09:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Open Office document to be open in Kpresenter (13.72 KB, application/x-zip-compressed)
2010-05-24 06:53 UTC, Lassi Nieminen
Details
Screenshot of the document in Open Office (154.61 KB, image/pjpeg)
2010-05-24 06:54 UTC, Lassi Nieminen
Details
Screenshot of the document in Kpresenter (104.13 KB, image/pjpeg)
2010-05-24 06:55 UTC, Lassi Nieminen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Faure 2010-05-28 03:34:10 UTC


---- Reported by lassi.ta.nieminen@nokia.com 2010-05-24 07:53:21 +0300 ----

Created an attachment
Open Office document to be open in Kpresenter

SOFTWARE VERSION:
 Kubuntu 9.10
 Koffice (svn revision 1127601)
 Test document (MS Office): mp03_file_name_inserted.odp

STEPS LEADING TO PROBLEM: 
 1.Open the attached document in MS Office 2003.
 2.Open the same document in Kpresenter.
 3.Observe the contents  in the first slide.


EXPECTED OUTCOME:
 Kpresenter should be able to display the file name inserted in the document.

Note:To insert file name,go to Insert->Fields->Filename.

ACTUAL OUTCOME:
 Kpresenter is not displaying file name.

FREQUENCY:
Always



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-05-24 07:54:56 +0300 ----

Created an attachment
Screenshot of the document in Open Office



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-05-24 07:55:54 +0300 ----

Created an attachment
Screenshot of the document in Kpresenter



--- Bug imported by faure@kde.org 2010-05-28 03:34  ---

This bug was previously known as _bug_ 170214.

Imported an attachment (id=47406)
Imported an attachment (id=47407)
Imported an attachment (id=47408)

Unknown bug field "example" encountered while moving bug
   <example>2010-05-24 07:55:54</example>

Comment 1 T Zachmann 2010-12-05 16:18:48 UTC
SVN commit 1203886 by zachmann:

Fix Bug 239820 -  kpresenter:openoffice:kpresenter is not displaying the inserted file name

This commit also make it quite easy to add missing variables.

BUG: 239820


 M  +18 -1     libs/kopageapp/KoPADocument.cpp  
 M  +3 -0      libs/kopageapp/KoPADocument.h  
 M  +46 -16    plugins/variables/InfoVariable.cpp  
 M  +3 -0      plugins/variables/InfoVariable.h  
 M  +1 -2      plugins/variables/InfoVariableFactory.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1203886
Comment 2 swathi 2010-12-27 09:53:20 UTC
Verified in calligra latest revision.(Git  commit 78f327920cfbc1143d2fdd5a6987a517ece2952f)