Fix Bug 239820 -  kpresenter:openoffice:kpresenter is not displaying the inserted file name

This commit also make it quite easy to add missing variables.

BUG: 239820

svn path=/branches/work/koffice-essen/; revision=1203886