plugins/variables/InfoVariable.cpp
@@ -26,6 +26,31 @@
 #include <KoXmlReader.h>
 #include <KoXmlWriter.h>
 
+#include <KGlobal>
+
+static const struct {
+    KoInlineObject::Property property;
+    const char * tag;
+    const char * saveTag;
+} propertyData[] = {
+    { KoInlineObject::DocumentURL, "file-name", "text:file-name" },
+    { KoInlineObject::Title, "title", "text:title" },
+    { KoInlineObject::Subject, "subject", "text:subject" },
+    { KoInlineObject::Keywords, "keywords", "text:keywords" },
+    { KoInlineObject::Description, "description", "text:description" }
+};
+
+static const unsigned int numPropertyData = sizeof(propertyData) / sizeof(*propertyData);
+
+QStringList InfoVariable::tags()
+{
+    QStringList tagList;
+    for (unsigned int i = 0; i < numPropertyData; ++i) {
+        tagList << propertyData[i].tag;
+    }
+    return tagList;
+}
+
 InfoVariable::InfoVariable()
         : KoVariable(true),
         m_type(KoInlineObject::DocumentURL)
@@ -47,15 +72,18 @@ void InfoVariable::propertyChanged(Property property, const QVariant &value)
 void InfoVariable::saveOdf(KoShapeSavingContext & context)
 {
     KoXmlWriter *writer = &context.xmlWriter();
-    QString nodeName;
-    if (m_type == KoInlineObject::Title)
-        nodeName = "text:title";
-    else if (m_type == KoInlineObject::Subject)
-        nodeName = "text:subject";
-    else if (m_type == KoInlineObject::Keywords)
-        nodeName = "text:keywords";
-    if (!nodeName.isEmpty()) {
-        writer->startElement(nodeName.toLatin1(), false);
+
+    typedef QMap<KoInlineObject::Property, const char*> SaveMap;
+    K_GLOBAL_STATIC(SaveMap, s_saveInfo)
+
+    if (!s_saveInfo.exists() ) {
+        for (unsigned int i = 0; i < numPropertyData; ++i) {
+            s_saveInfo->insert(propertyData[i].property, propertyData[i].saveTag);
+        }
+    }
+    const char *nodeName = s_saveInfo->value(m_type, 0);
+    if (nodeName) {
+        writer->startElement(nodeName, false);
         writer->addTextNode(value());
         writer->endElement();
     }
@@ -63,15 +91,17 @@ void InfoVariable::saveOdf(KoShapeSavingContext & context)
 
 bool InfoVariable::loadOdf(const KoXmlElement & element, KoShapeLoadingContext & /*context*/)
 {
-    const QString localName(element.localName());
+    typedef QMap<QString, KoInlineObject::Property> LoadMap;
+    K_GLOBAL_STATIC(LoadMap, s_loadInfo)
 
-    if (localName == "title") {
-        m_type = KoInlineObject::Title;
-    } else if (localName == "subject") {
-        m_type = KoInlineObject::Subject;
-    } else if (localName == "keywords") {
-        m_type = KoInlineObject::Keywords;
+    if (!s_loadInfo.exists() ) {
+        for (unsigned int i = 0; i < numPropertyData; ++i) {
+            s_loadInfo->insert(propertyData[i].tag, propertyData[i].property);
+        }
     }
+
+    const QString localName(element.localName());
+    m_type = s_loadInfo->value(localName);
 
     return true;
 }
